@@ -96,7 +96,7 @@ RewriteRule thumbnails-([a-z0-9]*)-page-([0-9]*)\.html(.*) thumbnails.php?album=
 
 RewriteRule thumbnails-([a-z0-9]*)-([\-]?[0-9]*)-page-([0-9]*)\.html(.*) thumbnails.php?album=$1&cat=$2&page=$3$4 [NC]
 
-RewriteRule thumbnails-([0-9a-z]*)\.html(.*) thumbnails.php?album=$1$2 [NC]
+RewriteRule thumbnails-([0-9a-z]*).*\.html(.*) thumbnails.php?album=$1$2 [NC]
 
 RewriteRule thumbnails-search-keyword-(.*)\.html(.*) thumbnails.php?album=search&keywords=on&search=$1$2 [NC]
 
@@ -126,4 +126,4 @@ RewriteRule displayimage-([0-9]+).*\.html(.*) displayimage.php?pid=$1$2 [NC]
 
 RewriteRule profile-op-([a-z0-9_]+)\.html(.*) profile.php?op=$1 [NC]
 
-RewriteRule profile-([0-9]+)\.html(.*) profile.php?uid=$1$2 [NC]
+RewriteRule profile-([0-9]+).*\.html(.*) profile.php?uid=$1$2 [NC]
